k8s/health/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: netflix-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: netflix-demo.acme.com
    http:
      paths:
      - backend:
          serviceName: netflix-demo
          servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: netflix-demo
  labels:
    app: netflix-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: netflix-demo
